--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,7 @@
 @import "partials";
 @import "z-index";
 // layout
+@import "loading";
 @import "trans";
 @import "layout";
 // form
@@ -37,3 +38,4 @@
 @import "contact";
 @import "map";
 @import "work";
+@import "android";
