--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,47 +1,74 @@
 .contact {
     background: #fff;
-    height: 60vh;
     padding-top: 80px;
+    padding-bottom: 50px;
+    z-index: 0;
     @include media-h(800px) {
-        height: 65vh;
         padding-top: 25px;
     }
     @include m-1024 {
         padding-top: 10px;
-        height: 63vh;
+    }
+    @include m-767 {
+        padding-bottom: 50px;
     }
     &:before {
         content: '';
         width: 100%;
-        height: 125px;
+        height: 205px;
         background: #fff;
         transform: skewY(5deg);
         position: absolute;
         top: -75px;
         left: 0;
+        z-index: -1;
+        @include m-767 {
+            top: -70px;
+        }
     }
     .main {
         width: 60%;
-        margin: 30px auto;
+        margin: auto;
         display: flex;
         @include m-1024 {
             width: 70%;
         }
+        @include m-767 {
+            flex-direction: column;
+            margin-top: -30px;
+            width: 75%;
+        }
         >div {
             width: 50%;
+            @include m-767 {
+                width: 100%;
+            }
         }
     }
     .infoBox {
         padding-top: 35px;
+        @include m-767 {
+            padding-left: 4%;
+        }
     }
     .info {
         font-size: 1.4rem;
         text-align: left;
         margin-bottom: 60px;
         padding-left: 65px;
+        @include m-767 {
+            margin-bottom: 50px;
+            font-size: 1.6rem;
+        }
+        @include m-374 {
+            font-size: 1.4rem;
+        }
         p {
             &:first-child {
                 font-weight: bold;
+                @include m-767 {
+                    margin-bottom: 10px;
+                }
                 &:before {
                     content: '';
                     width: 45px;
@@ -49,6 +76,10 @@
                     background: #000;
                     @extend %Y50;
                     left: -65px;
+                    @include m-767 {
+                        width: 30px;
+                        left: -45px;
+                    }
                 }
             }
             &:last-child {
@@ -69,6 +100,14 @@
     @include m-1024 {
         font-size: 12rem;
     }
+    @include m-767 {
+        font-size: 8rem;
+        top: -110px;
+    }
+}
+
+.form {
+    text-align: right;
 }
 
 .form-info {
@@ -79,6 +118,7 @@
 
 .mat-div {
     margin-bottom: 10px;
+    width: 100%;
     @include media-min(768px) {
         width: 48%;
     }
@@ -104,6 +144,9 @@
             border: 1px solid $orange;
             transition: 0.5s;
         }
+        @include m-767 {
+            min-height: 115px;
+        }
     }
 }
 
@@ -111,4 +154,9 @@
     width: 100%;
     overflow: hidden;
     position: relative;
+}
+
+.send {
+    @include btn-action(white, $orange, black, white);
+    margin: 30px 0;
 }
