--- a/sass/_marketing.scss
+++ b/sass/_marketing.scss
@@ -11,6 +11,10 @@
             transform: scale(0.75);
             margin-top: 0;
         }
+        @include m-374 {
+            transform: scale(0.6);
+            margin-top: -40px;
+        }
     }
     .animate-title {
         font-size: 2.3rem;
