--- a/sass/_partials.scss
+++ b/sass/_partials.scss
@@ -93,7 +93,11 @@ h2 {
     }
     @include m-767 {
         width: 85%;
-        padding: 25px 15px;
-        font-size: 1.8rem;
+        padding: 20px 15px;
+        font-size: 1.6rem;
+    }
+    @include m-374 {
+        padding: 15px;
+        font-size: 1.4rem;
     }
 }
