--- a/sass/_work-video.scss
+++ b/sass/_work-video.scss
@@ -30,7 +30,7 @@
             transform: translate(0);
             background: #fff;
             position: inherit;
-            padding: 30px 30px 80px;
+            padding: 30px 10% 100px;
         }
     }
     h3 {
@@ -59,7 +59,7 @@
         color: #000;
         @extend %trans;
         font-weight: bold;
-        @include m-1024 {
+        @include pad-only {
             font-size: 1.8rem;
             margin-top: 10px;
         }
