--- a/sass/self.scss
+++ b/sass/self.scss
@@ -122,3 +122,33 @@
         display: none;
     }
 }
+
+/* SHOWCASE */
+.showCaseBox {
+    .showCase {
+        .right {
+            padding-right: 0;
+
+            .showSlick {
+                .main {
+                    position: relative;
+                    transform: none;
+                    top: 0;
+                    left: 0;
+                    margin-top: 25%;
+                    margin-left: 15%;
+                }
+
+                position: relative;
+                width: 100%;
+                height: 100%;
+
+                &>div {
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
+}
