--- a/sass/self.scss
+++ b/sass/self.scss
@@ -12,7 +12,9 @@
     opacity: 0;
 }
 
+
 /* WOW */
+
 .wow {
     visibility: hidden;
 }
@@ -27,12 +29,10 @@
         opacity: 0;
         transform: translate3d(0, 50%, 0)
     }
-
     25% {
         opacity: 0;
         transform: translate3d(0, 25%, 0)
     }
-
     100% {
         opacity: 1;
         transform: none;
@@ -45,7 +45,6 @@
         -webkit-transform: translate3d(50%, 0, 0);
         transform: translate3d(50%, 0, 0);
     }
-
     to {
         opacity: 1;
         -webkit-transform: translate3d(0, 0, 0);
@@ -57,11 +56,9 @@
     0% {
         opacity: 0;
     }
-
     25% {
         opacity: 0;
     }
-
     100% {
         opacity: 1;
         transform: none;
@@ -80,55 +77,57 @@
     animation-name: fadeIn;
 }
 
+
 /* KV */
+
 .kv {
     .slogan {
         overflow: hidden;
     }
 }
 
-/* VIDEO */
-.work-video {
-    .main {
-        width: 50%;
-    }
 
+/* VIDEO */
+
+.work-video {
+    // .main {
+    //     width: 50%;
+    // }
     .indicator {
         transition: margin .5s ease;
     }
 }
 
+
 /* RWD */
+
 .rwd {
     .phone .slick-dots {
         bottom: 10px;
-
         li {
             margin: 0 -2.5px;
             transform: scale(0.5);
         }
     }
-
     .mac .slick-dots {
         bottom: 20px;
-
         li {
             margin: 0 -1.5px;
             transform: scale(0.75);
         }
     }
-
     .dots.abs {
         display: none;
     }
 }
 
+
 /* SHOWCASE */
+
 .showCaseBox {
     .showCase {
         .right {
             padding-right: 0;
-
             .showSlick {
                 .main {
                     position: relative;
@@ -138,11 +137,9 @@
                     margin-top: 25%;
                     margin-left: 15%;
                 }
-
                 position: relative;
                 width: 100%;
                 height: 100%;
-
                 &>div {
                     position: relative;
                     width: 100%;
