--- a/sass/self.scss
+++ b/sass/self.scss
@@ -1,235 +1,2 @@
-@import '../css/slick.min.css';
-@import '../css/slick-theme.min.css';
-@import '../css/jquery.fancybox.min.css';
-
-[v-cloak] {
-    display: none;
-}
-
-.fade-enter-active,
-.fade-leave-active {
-    transition: opacity .2s;
-}
-
-.fade-enter,
-.fade-leave-to {
-    opacity: 0;
-}
-
-
-/* WOW */
-
-.wow {
-    visibility: hidden;
-}
-
-.animated {
-    animation-duration: 1s;
-    animation-fill-mode: both;
-}
-
-@keyframes fadeInUp {
-    0% {
-        opacity: 0;
-        transform: translate3d(0, 50%, 0)
-    }
-
-    25% {
-        opacity: 0;
-        transform: translate3d(0, 25%, 0)
-    }
-
-    100% {
-        opacity: 1;
-        transform: none;
-    }
-}
-
-@keyframes fadeInRight {
-    from {
-        opacity: 0;
-        -webkit-transform: translate3d(50%, 0, 0);
-        transform: translate3d(50%, 0, 0);
-    }
-
-    to {
-        opacity: 1;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-
-    25% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-.fadeInUp {
-    animation-name: fadeInUp;
-}
-
-.fadeInRight {
-    animation-name: fadeInRight;
-}
-
-.fadeIn {
-    animation-name: fadeIn;
-}
-
-
-/* KV */
-
-.kv {
-    .slogan {
-        overflow: hidden;
-    }
-}
-
-/* HOW */
-.how {
-    .howBox {
-        li {
-            .howLine {
-                transform: translateY(-50%) scaleX(0);
-                transform-origin: left center;
-                transition: transform .5s ease;
-            }
-
-            &:nth-child(1) {
-                .howLine {
-                    transition-delay: .4s;
-                }
-            }
-
-            &:nth-child(2) {
-                .howLine {
-                    transition-delay: .85s;
-                }
-            }
-
-            &:nth-child(3) {
-                .howLine {
-                    transition-delay: 1.35s;
-                }
-            }
-
-            &.animated {
-                .howLine {
-                    transform: translateY(-50%) scaleX(1);
-                }
-            }
-
-            @media screen and (max-width: 767px) {
-                .howLine {
-                    transform-origin: top center;
-                    transform: translateY(-50%) scaleY(0);
-                }
-
-                &:nth-child(1) {
-                    .howLine {
-                        transition-delay: .2s;
-                    }
-                }
-
-                &:nth-child(2) {
-                    .howLine {
-                        transition-delay: .4s;
-                    }
-                }
-
-                &:nth-child(3) {
-                    .howLine {
-                        transition-delay: .6s;
-                    }
-                }
-
-                &.animated {
-                    .howLine {
-                        transform: translateY(-50%) scaleY(1);
-                    }
-                }
-            }
-        }
-    }
-}
-
-
-/* VIDEO */
-
-.work-video {
-
-    // .main {
-    //     width: 50%;
-    // }
-    .indicator {
-        transition: margin .5s ease;
-    }
-}
-
-
-/* RWD */
-
-.rwd {
-    .phone .slick-dots {
-        bottom: 10px;
-
-        li {
-            margin: 0 -2.5px;
-            transform: scale(0.5);
-        }
-    }
-
-    .mac .slick-dots {
-        bottom: 20px;
-
-        li {
-            margin: 0 -1.5px;
-            transform: scale(0.75);
-        }
-    }
-
-    .dots.abs {
-        display: none;
-    }
-}
-
-
-/* SHOWCASE */
-
-.showCaseBox {
-    .showCase {
-        .right {
-            padding-right: 0;
-
-            .showSlick {
-                .main {
-                    position: relative;
-                    transform: none;
-                    top: 0;
-                    left: 0;
-                    margin-top: 25%;
-                    margin-left: 15%;
-                }
-
-                position: relative;
-                width: 100%;
-                height: 100%;
-
-                &>div {
-                    position: relative;
-                    width: 100%;
-                    height: 100%;
-                }
-            }
-        }
-    }
-}
+@import 'vue';
+@import 'wow';
