--- a/sass/_kv-mask.scss
+++ b/sass/_kv-mask.scss
@@ -24,6 +24,15 @@
     -o-background-size: cover;
     -webkit-background-size: cover;
     background-size: cover;
+    @media screen and (max-width: 1680px) and (min-height: 800px) {
+        background-image: url(../img/svg/bg-city-2.svg);
+    }
+    @media screen and (max-width: 1200px) and (min-height: 800px) {
+        background-image: url(../img/svg/bg-city-3.svg);
+    }
+    @media screen and (max-width: 1024px) and (min-height: 800px) {
+        background-image: url(../img/svg/bg-city-h.svg);
+    }
 }
 
 .element-mask {
