--- a/sass/_marketing.scss
+++ b/sass/_marketing.scss
@@ -1,6 +1,7 @@
 .marketing {
     background: url('../img/old_mathematics.png') repeat;
     overflow: hidden;
+    margin-top: 100vh;
     .carouselBox {
         margin-top: 80px;
         position: relative;
@@ -72,48 +73,81 @@
         opacity: 0.4;
         left: 0%;
         top: 15%;
+        @include m-767 {
+            height: 150px;
+            opacity: 0.4;
+            left: 7%;
+            top: 5%;
+        }
     }
     .line2 {
         height: 330px;
         opacity: 0.5;
         left: 0;
         bottom: -8%;
+        @include m-767 {
+            bottom: -30%;
+            opacity: 0.6;
+        }
     }
     .line3 {
         height: 400px;
         opacity: 0.1;
         left: 23%;
         top: -10%;
+        @include m-767 {
+            display: none;
+        }
     }
     .line4 {
         height: 300px;
         opacity: 0.1;
         left: 20%;
         bottom: 13%;
+        @include m-767 {
+            display: none;
+        }
     }
     .line5 {
         height: 500px;
         opacity: 0.1;
         right: 20%;
         top: -8%;
+        @include m-767 {
+            height: 300px;
+            right: 2%;
+            top: 5%;
+        }
     }
     .line6 {
         height: 180px;
         opacity: 0.4;
         right: 13%;
         top: 40%;
+        @include m-767 {
+            display: none;
+        }
     }
     .line7 {
         height: 500px;
         opacity: 0.1;
         right: 20%;
         bottom: -15%;
+        @include m-767 {
+            height: 300px;
+            opacity: 0.2;
+            right: 2%;
+            bottom: 0%;
+        }
     }
     .line8 {
         height: 300px;
         opacity: 0.2;
         right: 0;
         bottom: 5%;
+        @include m-767 {
+            display: none;
+        }
     }
     .ani_start {
         height: 0;
