--- a/sass/_kv.scss
+++ b/sass/_kv.scss
@@ -48,7 +48,7 @@
         background: url(../img/bg-kv.jpg) no-repeat center / cover;
         z-index: -1;
         @include pos-mid;
-        animation: kv 30s linear infinite;
+        animation: kv 30s linear 1;
         // left: 0;
     }
     .mask {
