--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -77,15 +77,15 @@
 
 @include keyframes(kv) {
     0% {
-        width: 150%;
+        width: 100%;
         left: 50%;
     }
-    50% {
-        width: 250%;
-        left: 0;
-    }
+    // 50% {
+    //     width: 250%;
+    //     left: 0;
+    // }
     100% {
-        width: 150%;
-        left: 50%;
+        width: 200%;
+        left: 0;
     }
 }
